[package]
name = "busy_beaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.5.0"
num-bigint = "0.4.4"
num-integer = "0.1.46"
num-traits = "0.2.18"
regex = "1.10.4"
thiserror = "1.0.58"
# rug = "1.19.2"
